[package]
name = "binance_netflow"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1 "
chrono = { version = "0.4", default-features = false, features = ["clock"] }
crossterm = { version = "0.28", default-features = false }
csv = "1"
futures = "0.3"
governor = { version = "0.10", default-features = false, features = ["std"] }
humantime = "2.2"
num-format = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
serde = { version = "1", features = ["derive"], default-features = false }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "sync"] }
tokio-tungstenite = { version = "0.27", features = ["native-tls"] }

[profile.release]
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1

